# Tani-Genie

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  TaniGenie_1784263248311-4.html  biome.json  docker-compose.yml  next.config.ts  package.json  pnpm-lock.yaml  prisma.config.ts  pyproject.toml  requirements-dev.txt  requirements.txt  tsconfig.json  vitest.config.ts  vitest.integration.config.ts
.github/workflows/: ci.yml
api/: main.py  schemas.py  service.py
backend/: requirements.txt
config/: config.yaml
configs/: crops.yaml  disease_rules.yaml  model.yaml
data/gold/: gold_labels_template.csv
data/sample/: prediction_request.json
docs/: project-brief.md  user-journey.md
integration/tani-genie/: README.md
notebooks/: 01_eda_notes.md
prisma/: schema.prisma  seed.ts
public/: manifest.webmanifest
scripts/: build_dataset.py  evaluate.py  evaluate_gold.py  generate_pseudo_labels.py  inspect_data.py  predict.py  run_pipeline.sh  seed_gold_labels.py  select_active_learning.py  train.py
src/: config.py
src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
src/data/: load_raw.py  make_dataset.py
src/features/: build_features.py
src/lib/: api-response.test.ts  api-response.ts  async-cache.ts  clock.ts  errors.ts  openapi.ts  prisma.ts  schemas.ts  transaction.ts  ui-data.ts
src/models/: predict.py  train.py
src/pest_risk/: __init__.py  cli.py  config.py  constants.py
src/types/: ui.ts  (+4 more)
tests/: test_api.py  test_config.py  test_data.py  test_features.py  test_labeling.py  test_pseudo_label.py
(+143 files in other folders)
